--- a/myApp/src/components/Header/index.css
+++ b/myApp/src/components/Header/index.css
@@ -2,7 +2,9 @@
     margin: 0;
     padding: 0
 }
-
+.link-style {
+    text-decoration: none;
+}
 .header-container {
     height: 10vh;
     width: 100%;
@@ -16,7 +18,7 @@
 .header-image-styling {
     height: 10vh;
     width: 10%;
-    margin-left: 30px;
+    margin-left: 90px;
 }
 .tabs-container-for-large-devices {
     display: flex;
