--- a/myApp/src/components/Home/index.css
+++ b/myApp/src/components/Home/index.css
@@ -2,7 +2,7 @@
     min-height: 90vh;
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 .content-container {
@@ -24,7 +24,7 @@
         height: 30vh;
         justify-content: none;
         margin-left: 0;
-    
+        align-items: center;
     }
 }
 .main-heading {
@@ -60,7 +60,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    margin-left: 30px;  
 }
 .home-page-image {
     height: 85vh;
